fix(client): 🩹 corrigir fonte "sans-script" para usar a `Lora` no tema global

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,6 +2,6 @@
 
 @theme {
   --font-sans:
-    var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    var(--font-lora), ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
