refactor(client): 💄 adicionar tamanho mínimo de altura no `body`

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -115,7 +115,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground m-0 font-sans;
+    @apply bg-background text-foreground m-0 min-h-svh font-sans;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
